--- a/public/login.html
+++ b/public/login.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="hero-text">
+            <!-- <h1>Your business grows here.</h1> -->
+            <!-- <p></p> -->
+            <button class="join-now-btn">Signup with Google</button>
+        </div>
+        
+
+    </section>
 </body>
 </html>
