--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,9 +9,7 @@
 <body>
     <section class="hero">
         <div class="hero-text">
-            <!-- <h1>Your business grows here.</h1> -->
-            <!-- <p></p> -->
-            <a  href="/auth/google" class="join-now-btn">Signup with Google</a>
+            <h1>Dashboard</h1>
         </div>
         
 
